updated score card

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <select id="courseSelect" onchange="loadCourse(this.value)">
     <option>Select a Course</option>
 </select>
-<select id="teeSelect">
+<select id="teeSelect" onchange="getTee(this.value)">
 
 </select>
 <div class="card">
