--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <option>Select a Course</option>
 </select>
 <select id="teeSelect" onchange="getTee(this.value)">
+    <option>Select a Tee</option>
 
 </select>
 <div class="card">
