--- a/index.html
+++ b/index.html
@@ -15,15 +15,25 @@
     <a href="#" rel="modal:close">Close</a>
 </div>
 $('#login-form').modal();
-<select id="courseSelect" onchange="loadCourse(this.value)">
-    <option>Select a Course</option>
-</select>
-<select id="teeSelect" onchange="getTee(this.value)">
-    <option>Select a Tee</option>
 
-</select>
+<div class="modal" id="setup">
+    <div class="panel">
+        <select id="courseSelect" onchange="loadCourse(this.value)">
+            <option>Select a Course</option>
+        </select>
+        <select id="teeSelect" onchange="getTee(this.value)">
+            <option>Select a Tee</option>
+
+        </select>
+        <span>Number of Players:</span>
+        <input type="number" class="numinput" placeholder="Number of players" max=4 min="1">
+        <button onclick="addPlayers($('.numinput').val())">GO</button>
+    </div>
+</div>
+<div class="content">
+    <div>Lot's of random text goes here: </div>
+</div>
 <div class="card">
-
 </div>
 </body>
 </html>
