--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 </head>
 <body>
 <div id="ex1" class="modal">
-    <p>Thanks for clicking. That felt good.</p>
-    <a href="#" rel="modal:close">Close</a>
+
 </div>
-$('#login-form').modal();
+<!--$('#login-form').modal();-->
 
 <div class="modal" id="setup">
     <div class="panel">
@@ -30,9 +29,9 @@ $('#login-form').modal();
         <button onclick="addPlayers($('.numinput').val())">GO</button>
     </div>
 </div>
-<div class="content">
-    <div>Lot's of random text goes here: </div>
-</div>
+<!--<div class="content">-->
+    <!--<div>Lot's of random text goes here: </div>-->
+<!--</div>-->
 <div class="card">
 </div>
 </body>
